--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -1,13 +1,20 @@
 {{ define "main" }}
 
-<h1>{{ $.Page.Title}}</h1>
-<p><i>{{ .Params.Date}}</i></p>
-<p><b>Forfatter: {{ .Params.author}}</b></p>
-<p><i>{{ .Params.description }}</i></p>
-
-
-{{ .Params.Date }}
-
-{{ $.Page.Content }}
+<div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1>{{ $.Page.Title}}</h1>
+      </div>
+      <div class="col-lg-6">
+        <p><i>{{ .Params.Date}}</i></p>
+      </div>
+      <div class="col-lg-6">
+        <p><b>Forfatter: {{ .Params.author}}</b></p>
+      </div>
+      <div class="col-lg-12">
+        <p>{{ $.Page.Content }}</p>
+      </div>
+    </div>
+  </div>
 
 {{end}}
