--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,7 +1,7 @@
 // https://type-scale.com/
 // Inter
 
-@import url('https://fonts.googleapis.com/css?family=Inter:500,400,300');
+@import url('https://fonts.googleapis.com/css?family=Roboto:500,400,300');
 
 html {
     font-size: 16px;
@@ -9,7 +9,7 @@ html {
 
 body {
     background: white;
-    font-family: "Inter", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
     line-height: 1.75;
 }
@@ -25,7 +25,7 @@ h4,
 h5 {
     margin: 3rem 0 1.38rem;
     margin-bottom: 1rem;
-    font-family: "Inter", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     line-height: 1.2em;
 
