--- a/layouts/_default/template.html
+++ b/layouts/_default/template.html
@@ -1,11 +1,12 @@
 {{ define "main" }}
-
-<h1>{{ $.Page.Title}}</h1>
-
-{{range .Site.RegularPages}}
-
-    {{ partial "card.html" . }}
-
-{{end}}
-
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1>{{ $.Page.Title}}</h1>
+            {{range .Site.RegularPages}}
+                {{ partial "card.html" . }}
+            {{end}}
+        </div>
+    </div>
+</div>
 {{end}}
