--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -11,8 +11,18 @@
       <div class="col-lg-6">
         <p><b>Forfatter: {{ .Params.author}}</b></p>
       </div>
-      <div class="col-lg-12">
+    </div>
+    <div class="row">
+      <div class="col-lg-8">
         <p>{{ $.Page.Content }}</p>
+      </div>
+      <div class="col-lg-4">
+        <h3>Tags</h3>
+        <ul>
+          {{ range (.GetTerms "tags") }}
+              <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
+          {{ end }}
+      </ul>
       </div>
     </div>
   </div>
