fix: added back extension of partial templates even if they don't seem to be needed

--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -5,7 +5,7 @@
       <h1>{{ .Title }}</h1>
         <div class="row">
           {{ range .Pages }}
-           {{ partial "blog-card" . }}
+           {{ partial "blog-card.html" . }}
           {{ end }}
         </div>
     </div>
