--- a/layouts/_default/landing-page.html
+++ b/layouts/_default/landing-page.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             {{range .Site.RegularPages}}
-                {{ partial "blog-card" . }}
+                {{ partial "blog-card.html" . }}
             {{end}}
         </div>
     </div>
