--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,9 +2,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3">
-                <div class="header__title">
-                    <label>{{ $.Site.Title}}</label>
-                </div>
+                <a href="/">
+                    <div class="header__title">
+                        <label>{{ $.Site.Title }}</label>
+                    </div>
+                </a>
             </div>
             <div class="col-lg-9">
 
