feat: sort posts by date/time desc

--- a/layouts/_default/landing-page.html
+++ b/layouts/_default/landing-page.html
@@ -2,7 +2,7 @@
 <div class="blog">
     <div class="container">
         <div class="row">
-            {{range .Site.RegularPages}}
+            {{range .Site.RegularPages.ByDate }}
                 {{ partial "blog-card.html" . }}
             {{end}}
         </div>
