--- a/layouts/_default/landing-page.html
+++ b/layouts/_default/landing-page.html
@@ -2,7 +2,7 @@
 <div class="blog">
     <div class="container">
         <div class="row">
-            {{range .Site.RegularPages.ByDate }}
+            {{range where .Site.RegularPages.ByDate "Section" "posts" }}
                 {{ partial "blog-card.html" . }}
             {{end}}
         </div>
