--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -2,3 +2,17 @@
 $lg-spacing: 3.75rem;
 $md-spacing: 2.5rem;
 $sm-spacing: 1.25rem;
+
+// COLORS
+$primary-text-color: #ffffff;
+$secondary-text-color: #aaaaaa;
+$primary-bg-color: #1e1e1e;
+$secondary-bg-color:#252526;
+$secondary-hover-bg-color: #2d2d30;
+
+// FONT-SIZE
+$xl-header-font: 1.802rem;
+$lg-header-font: 1.602rem;
+$md-header-font: 1.424rem;
+$sm-header-font: 1.266rem;
+$xs-header-font: 1.125rem;
