--- a/assets/sass/bootstrap/_row.scss
+++ b/assets/sass/bootstrap/_row.scss
@@ -1,4 +1,4 @@
 .row {
-    padding-top:$lg-spacing;
-    padding-bottom:$lg-spacing;
+    padding-top:$sm-spacing;
+    padding-bottom:$sm-spacing;
 }
