--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -28,19 +28,33 @@ h5 {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     line-height: 1.2em;
+    color: $primary-text-color;
 
+}
+
+p,
+label,
+i,
+li,
+code {
+    color: $secondary-text-color !important;
 }
 
 h1 {
     margin-top: 0;
-    font-size: 2rem;
-}
+    font-size: $xl-header-font;
+  }
+  
+  h2 {font-size: $lg-header-font;}
+  
+  h3 {font-size: $md-header-font;}
+  
+  h4 {font-size: $sm-header-font;}
+  
+  h5 {font-size: $xs-header-font;}
 
-h2 {
-    font-size: 1.6111rem;
-}
-
-p,li {
+p,
+li {
     font-size: 1rem;
 }
 
