--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
-    background-color: black;
-    color:white;
+    margin-top:$sm-spacing;
+    background-color: $secondary-bg-color;
+    color:$secondary-text-color;
 }
