--- a/layouts/partials/blog-card.html
+++ b/layouts/partials/blog-card.html
@@ -1,17 +1,10 @@
-<div class="post">
-    <div class="col-lg-12">
-
-        <div class="post__content">
-            <h3 class="post__title">
-                {{ $.Page.Title }}
-            </h3>
-            <i> {{ .Page.Date }}</i>
-            <p>
-                <i>{{ .Params.description}}</i>
-            </p>
-
-            <a href=" {{ $.Page.URL }}">Les mer</a>
+<div class="col-lg-6">
+    <a href=" {{ $.Page.URL }}">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">{{ $.Page.Title }}</h5>
+                <p class="card-text">{{ .Params.description}}</p>
+            </div>
         </div>
-
-    </div>
+    </a>
 </div>
